# targeted_ABSA

./: .env.example  .gitignore  Makefile  RUNBOOK.md  clear_data.ipynb  dataloader.py  justfile  main.py  pyproject.toml  requirements.txt  result_ABSA_2  result_ABSA_3  result_ABSA_4  result_ABSA_5  train.py  vocabulary.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
.planning/graphs/: GRAPH_REPORT.md  graph.html  graph.json
.planning/phases/01-inference-api/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-SPEC.md
.planning/phases/02-frontend-foundation/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md
.planning/research/: SUMMARY.md  api-server.md  deployment.md  domain-context.md  frontend-demo.md
Data/: dev.jsonl  hotel_dev.jsonl  hotel_test.jsonl  hotel_train.jsonl  mobile_dev.jsonl  mobile_test.jsonl  mobile_train.jsonl  restaurant_dev.jsonl  restaurant_test.jsonl  restaurant_train.jsonl  test.jsonl  train.jsonl
api/: inference.py  main.py  schemas.py
config/: attention.yaml  base.yaml  encoders.yaml  experiments.yaml  label_structures.yaml  losses.yaml
frontend/: vite.config.js
frontend/src/: App.css  App.jsx
model/: conditional_attn.py  gated_fusion.py  mlp_head.py  targeted_absa.py
reports/: test_metrics.json
source/: evaluate.py  joint_decoding.py  train.py  vocabulary.py
source/model/: attn_pooling.py  targeted_absa.py
