[project]
name = "targeted-absa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "numpy>=2.5.0",
    "protobuf>=7.35.1",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sentencepiece>=0.2.1",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
